--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 html {
+  color-scheme: light dark;
   --color-accent: oklch(65% 50% 0);
   accent-color: var(--color-accent);
 }
@@ -19,6 +20,43 @@ body {
   }
 
   nav {
+    --border-color: oklch(50% 10% 200 / 40%);
+    /* border-bottom-color: var(--border-color); */
+
+    display: flex;
+    margin-bottom: 20px;
+    border-bottom: 1px solid var(--border-color);
+
+    a {
+      flex: 1;
+      text-decoration: none;
+      color: inherit;
+      text-align: center;
+      padding: 0.5em;
+    }
+
+    a.current {
+      border-bottom: 0.4em solid var(--border-color);
+      padding-bottom: 0.2em;
+      font-weight: bold;
+    }
+
+    a:hover {
+      border-bottom: 0.4em solid var(--color-accent);
+      background-color: color-mix(in oklch, var(--color-accent), canvas 85%);
+      padding-bottom: 0.2em;
+    }
+  } 
+  
+  .color-scheme {
+    position: absolute;
+    top: 1rem;
+    right: 1rem;
+    font-size: 80%;
+    font-family: inherit;
+  }
+
+  /* nav {
     display: flex;
     margin-bottom: 20px;
     border-bottom: 1px solid oklch(80% 3% 200);
@@ -50,7 +88,7 @@ body {
       background-color: oklch(from var(--color-accent) 95% 5% h);
       padding-bottom: 0.2em;
     }
-  }
+  } */
 
   /* form {
     input, textarea, button {
