--- a/style.css
+++ b/style.css
@@ -5,9 +5,6 @@ html {
 }
 
 body {
-    /* Set line height to 1.5 times the font size
-         and use the OS’s UI font as the website font
-       */
     font: 100%/1.5 system-ui;
 
     max-width: 100ch;
@@ -21,7 +18,6 @@ body {
 
 nav {
   --border-color: oklch(50% 10% 200 / 40%);
-  /* border-bottom-color: var(--border-color); */
 
   display: flex;
   margin-bottom: 20px;
@@ -55,59 +51,6 @@ nav {
   font-size: 80%;
   font-family: inherit;
 }
-
-/* nav {
-  display: flex;
-  margin-bottom: 20px;
-  border-bottom: 1px solid oklch(80% 3% 200);
-
-  ul {
-    display: contents;
-  }
-
-  li {
-    display: contents;
-  }
-
-  a {
-    flex: 1;
-    text-decoration: none;
-    color: inherit;
-    text-align: center;
-    padding: 0.5em;
-  }
-
-  a.current {
-    border-bottom: 0.4em solid oklch(80% 3% 200);
-    padding-bottom: 0.2em;
-    font-weight: bold;
-  }
-
-  a:hover {
-    border-bottom: 0.4em solid var(--color-accent);
-    background-color: oklch(from var(--color-accent) 95% 5% h);
-    padding-bottom: 0.2em;
-  }
-} */
-
-/* form {
-  input, textarea, button {
-    font: inherit;
-    width: 100%;
-    box-sizing: border-box;
-  }
-
-  label {
-    display: block;
-    margin-block: 0.5rem;
-  }
-} */
-
-/* label {
-  display: grid;
-  grid-template-columns: subgrid;
-  grid-column: 1 / -1;
-} */
 
 form {
   display: grid;
@@ -196,4 +139,78 @@ section {
     color: black;
     border-radius: 50%; 
   } 
+}
+
+.project-details {
+  font-family: 'Baskerville', serif;
+  font-variant-numeric: oldstyle-nums;
+
+  .project-year {
+    color: #888;
+  }
+}
+
+#projects-plot {
+  max-width: 20em;
+  margin-block: 2em;
+
+  overflow: visible;
+}
+
+.swatch {
+  display: inline-block;
+  width: 1em;
+  height: 1em;
+  aspect-ratio: 1 / 1;
+  background-color: var(--color);
+  border-radius: 50%;
+}
+
+.legend {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(9em, 1fr));
+  gap: 2em;
+  border: 1px solid #ccc;
+  padding: 1em;
+  margin: 1em;
+  list-style-type: none;
+  flex: 1;
+}
+
+.legend-item {
+  display: flex;
+  align-items: center;
+  gap: 0.5em;
+
+  em {
+    font-style: italic;
+    color: #888;
+  }
+}
+
+.container {
+  display: flex;
+  align-items: center;
+  gap: 2em;
+}
+
+/* Hover interaction with pie */
+
+&:has(path:hover) {
+    path:not(:hover) {
+      opacity: 0.5;
+    }
+
+    path {
+      transition: 300ms;
+      cursor: pointer;
+    }
+}
+
+.selected {
+  --color: oklch(60% 45% 0) !important;
+
+  &:is(path) {
+    fill: var(--color);
+  }
 }
